Implemented Source and destination for Stitch
Implemented Source and destination for Stitch
