# src/class/StitchdataAccountCreationSuccessResponse.ts
@@ -1,0 +1,21 @@
+import { Stitchdata } from './Stitchdata'
+import { EnumModule } from '../Enum/EnumModule'
+import { StitchdataCreateAccount } from './StitchdataCreateAccount';
+
+export class StitchdataAccountCreationSuccessResponse extends StitchdataCreateAccount {
+    access_token: string;
+    stitch_account_id: string;
+
+    constructor(stitchdata: Stitchdata, stitchdataCreateAccount: StitchdataCreateAccount) {
+        super();
+        this.access_token = stitchdata.Token;
+        this.stitch_account_id = stitchdata.AccountId;
+        this.FirstName = stitchdataCreateAccount.FirstName;
+        this.LastName = stitchdataCreateAccount.LastName;
+        this.Company = stitchdataCreateAccount.Company;
+        this.Email = stitchdataCreateAccount.Email;
+
+        return this;
+    }
+}
+
